--- a/package.json
+++ b/package.json
@@ -39,5 +39,5 @@
   "devDependencies": {
     "gh-pages": "^2.1.1"
   },
-  "homepage": "http://paragasa.github.io/react-fullstack-blog"
+  "homepage": "http://paragasa.github.io/react-blog-bloggel"
 }
