--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
+  "proxy": "http://localhost:4000",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -41,4 +42,5 @@
     "gh-pages": "^2.1.1"
   },
   "homepage": "http://paragasa.github.io/react-blog-bloggel"
+
 }
