--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "gh-pages": "^2.1.1"
   },
-  "homepage": "http://paragasa.github.io/react-blog-bloggel"
+  "proxy":"http://localhost:4000"
+  
 
 }
